# ewaldis

./: CMakeLists.txt  README.md  main.cpp
data/: enron_vertices.csv
data/dblp1/: dblp_test_negative_events.csv  dblp_test_positive_events.csv  dblp_train_negative_events.csv  dblp_train_positive_events.csv
data/dblp2/: dblp_test_negative_events.csv  dblp_test_positive_events.csv  dblp_train_negative_events.csv  dblp_train_positive_events.csv  dblp_vertices.csv
data/dblp3/: dblp_test_negative_events.csv  dblp_test_positive_events.csv  dblp_train_negative_events.csv  dblp_train_positive_events.csv
data/enron/: enron_edges.csv  enron_test_negative_events.csv  enron_test_positive_events.csv  enron_train_negative_events.csv  enron_train_positive_events.csv
scripts/: dataset_preparator_dblp.R  dataset_preparator_enron.R
src/: CMakeLists.txt  DynamicGraph.cpp  DynamicGraph.h  DynamicGraphExamples.cpp  DynamicGraphExamples.h  Edge.cpp  Edge.h  GeneticPatternExtractor.cpp  GeneticPatternExtractor.h  NominalEncoder.cpp  NominalEncoder.h  OccupiedGraph.cpp  OccupiedGraph.h  Pattern.cpp  Pattern.h  PatternChecker.cpp  PatternChecker.h  PatternEdge.cpp  PatternEdge.h  PatternMiner.cpp  PatternMiner.h  RandomGenerator.cpp  RandomGenerator.h  RandomWalker.cpp  RandomWalker.h  Suitabilities.cpp  Suitabilities.h  Vertex.cpp  Vertex.h  commonutils.cpp  commonutils.h  commonutilstemplated.cpp  commonutilstemplated.h  main.cpp
